# IQ9075_dinov3

./: .gitattributes  .gitignore  dino_v3_download.py
E2E_ondevice/: device_inference.py  device_orchestrator.py  export_model.py  monitor_device.py  run_e2e.py  run_host_e2e.py
onnx_convert/: .gitattributes  1_convert_on_host.sh  3_deploy_and_run.py  ARCHITECTURE.md  README.md  cleanup_and_reorg.sh  dinov3.onnx  export_dinov3.py  implementation_plan.md  inference_dinov3.cpp  input_list.txt  inspect_model.py  requirements.txt  task.md  upload_to_github.sh  walkthrough.md
onnx_convert/assets/: dinov3_qnn_net.json
onnx_convert/common/: dinov3.onnx.data  verify_onnx.py
onnx_convert/inference_results/: execution_metadata.yaml
onnx_convert/native_qnn/: CMakeLists.txt  convert_on_host.sh  input_list.txt
onnx_convert/native_qnn/custom_op/: README.md
onnx_convert/native_qnn/src/: dinov3_qnn.cpp  inference_dinov3.cpp
onnx_convert/output_results/output/: execution_metadata.yaml
onnx_convert/scripts/: deploy.py  inference.py  inference_ort.py  preprocess_input.py
onnx_convert/test/: input.raw  input_list.txt
onnx_download/: dinov3_pth_download.py  dinov3_vision_test.py  export_dinov3.py  manual_download.sh
onnx_download/dinov3-vitb16/: dinov3.onnx
onnx_download/dinov3-vitb7b16/: dinov3.onnx
onnx_download/dinov3_vit7b_pth/: README.md  config.json  model.safetensors.index.json
onnx_download/visualize/: inspect_onnx.py  visualize_dinov3.py
provision/: prog_firehose_ddr.elf  provision_1_1.xml  provision_1_2.xml
rb8_core_kit/: rawprogram3.xml
(+5 files in other folders)
